--- a/src/maiwoche.html
+++ b/src/maiwoche.html
@@ -82,7 +82,25 @@
       </section>
       <section class="aside-content__section">
         <h2 class="aside-content__headline">Hörproben von Hans Atom</h2>
-          <!-- bitte hier die Playlist rein packen -->
+        <ul class="playlist">
+          <li class="playlist__item">
+          <img src="./audio/hansatom_-_4real.mp3" alt="Hans Atom feat. Urmymuse and Stellar Artwars - 4 Real" data-js-playlist>
+      </li>
+        <li class="playlist__item">
+          <img src="./audio/hansatom_-_all-off-you.mp3" alt="Hans Atom feat Miss Judged - All off you" data-js-playlist>
+        </li>
+        <li class="playlist__item">
+          <img src="./audio/hansatom_-_fine_print.mp3" alt="Hans Atom feat. Lonnie Ray Atkinson and Kirkoid - Fine Print" data-js-playlist>
+        </li>
+          <li class="playlist__item">
+            <img src="./audio/hansatom_-_how-are.mp3" alt="Hans Atom feat. the Fireproof Babies and Miss Judged - How are" data-js-playlist>
+          </li>
+          <li class="playlist__item">
+            <img src="./audio/hansatom_-_paint-the-sky.mp3" alt="Hans Atom feat Miss Judged - Paint the Sky" data-js-playlist>
+          </li>
+          <li class="playlist__item">
+            <img src="./audio/hansatom_-_persephone.mp3" alt="Hans Atom - Persephone" data-js-playlist>
+          </li>
         </ul>
       </section>
     </aside>
